--- a/ONGC_Website/style.css
+++ b/ONGC_Website/style.css
@@ -7,14 +7,13 @@ body {
   }
 }
 @media screen and (max-width: 991px) {
-  .navbeaut {
+  .navbeaut-1 {
     position: absolute;
-
     right: 266px;
-
     top: 59px;
   }
 }
+
 @media screen and (max-width: 385px) {
   .row-modify {
     display: flex;
@@ -27,17 +26,30 @@ body {
     flex-direction: column;
   }
 }
-@media screen and (max-width: 413px) {
-  .row-modify3 {
-    display: flex;
-    flex-direction: column;
+@media screen and (max-width: 430px) {
+  .navbeaut-1 {
+    position: absolute;
+    right: 57px;
+    top: 57px;
+  }
+  .navbeaut-2 {
+    position: absolute;
+    right: 19px;
+    top: 9px;
   }
 }
-@media screen and (max-width: 450px) {
-  .row-modify4 {
-    width: 10px;
+/* 
+@media screen and (min-width: 576px) {
+  .col-12 {
+    font-size: x-large;
+    width: 80%;
   }
 }
+@media screen and (max-width: 576px) {
+  .col-12 {
+    font-size: medium;
+  }
+} */
 
 .card {
   color: midnightblue;
@@ -61,4 +73,17 @@ body {
 
 h3 {
   color: rosybrown;
+}
+
+.bgcolor {
+  background-color: lemonchiffon;
+}
+.bgcolor1 {
+  background-color: #4682b4;
+}
+.align {
+  text-align: justify;
+}
+.m0 {
+  margin: 0;
 }
