--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,30 +1,23 @@
-        <!-- Footer -->
-        <footer class="bg-light text-dark text-center">
-            <ul class="nav nav-tabs" style="background-color: #bc987e">
-                <li class="nav-item">
-                    <a class="nav-link footer_links" href="#">Sitemap</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link footer_links" href="#">Privacy Policy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link footer_links" href="#">Terms of Use</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link footer_links" href="">Disclaimer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" style="color: black" href=""
-                    >Copyright © Oil and Natural Gas Corporation Limited, All Rights
-                    Reserved.</a
-                    >
-                </li>
-            </ul>
-            <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"
-            ></script>
-        </footer>
-    </body>
+    <!-- Footer -->
+    <footer class="bg-light text-dark text-center">
+        <ul class="nav nav-tabs" style="background-color: #bc987e">
+            <li class="nav-item">
+                <a class="nav-link footer_links" href="#">Sitemap</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link footer_links" href="#">Privacy Policy</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link footer_links" href="#">Terms of Use</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link footer_links" href="">Disclaimer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color: black" href="">Copyright © Oil and Natural Gas Corporation Limited, All Rights Reserved.</a>
+            </li>
+        </ul>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </footer>
+</body>
 </html>
