--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,78 +1,45 @@
 {% load static %}
 <body>
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid d-flex justify-content-between">
-            <div class="d-flex align-items-center">
-                <a class="navbar-brand" href="{% url 'index' %}"
-                ><img
-                    src="{% static 'Assets\Logo.png' %}"
-                    alt="Logo"
-                    width="80"
-                    height="80"
-                    class="d-inline-block"
-                /></a>
-
-                <h6 class="tagline" style="color: darkred">
-                Oil and Natural Gas Corporation Limited
-                <p style="font-size: 10px; color: black">A Maharatna Company</p>
-                </h6>
-            </div>
-            <div>
-                <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle text-primary"
-                                href="#"
-                                id="navbarDropdown"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                                >About Us</a
-                            >
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li>
-                                <a class="dropdown-item text-primary" href="#">ONGC</a>
-                                </li>
-                                <li>
-                                <a class="dropdown-item text-primary" href="#">About Us</a>
-                                </li>
-                                <li>
-                                <a class="dropdown-item text-primary" href="#">SAS</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-primary" href="#">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-primary" href="#">Reports</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <form class="d-flex">
-                <input
-                class="form-control me-2"
-                type="search"
-                placeholder="ElasticSearch"
-                aria-label="Search"
-                x
-                />
-            </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid d-flex justify-content-between align-items-end">
+        <div class="d-flex align-items-end">
+          <a class="navbar-brand" href="{% url 'index' %}">
+            <img src="{% static 'Assets\Logo.png' %}" alt="Logo" width="80" height="80" class="d-inline-block" />
+          </a>
+          <h6 class="tagline my-0" style="color: darkred"> Oil and Natural Gas Corporation Limited <p style="font-size: 10px; color: black" class="mb-2"> A Maharatna Company </p>
+          </h6>
         </div>
+        <div class="navbeaut">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Project</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item text-primary" href="#">CAP</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item text-primary" href="{% url 'about-sas' %}">SAS</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary" href="#">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-primary" href="#">Reports</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <form class="d-flex align-self-end navbeaut-1">
+          <input class="form-control me-2" type="search" placeholder="ElasticSearch" aria-label="Search" />
+          <img src="{% static 'Assets\search.png' %}" width="30" height="30" alt="" />
+        </form>
+      </div>
     </nav>
+    <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
