improved template styling, started DLIS views, Test on jupyter

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'Styles\style.css' %}">
 </head>
 
+<body>
+  {% include 'includes/navbar.html' %}
 
-{% include 'includes/navbar.html' %}
+  {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-danger text-center" role="alert">
+      {{message}}
+    </div>
+    {% endfor %}
+  {% endif %}
 
-{% block content %}{% endblock %}
+  {% block content %}
+  {% endblock content %}
 
-{% include 'includes/footer.html' %}
+  {% include 'includes/footer.html' %}
+</body>
+</html>
