--- a/templates/home.html
+++ b/templates/home.html
@@ -111,7 +111,7 @@
               <a href="{% url 'create-LAS' %}" class="dropdown-item text-success" type="button"> LAS </a>
             </li>
             <li>
-              <a href="{% url 'view-DLIS' %}" class="dropdown-item text-success" type="button"> DLIS </a>
+              <a href="{% url 'create-DLIS' %}" class="dropdown-item text-success" type="button"> DLIS </a>
             </li>
             <li>
               <button class="dropdown-item text-success" type="button"> SEGY </button>
