--- a/webLog/templates/webLog/dlis.html
+++ b/webLog/templates/webLog/dlis.html
@@ -15,10 +15,12 @@
                 <h1 class="py-3" >Upload a DLIS File</h1>
                 <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
+                    {% for field in form %}
                     <!-- Input:Text -->
                     <div class="mb-3">
-                        <input class="form-control" type="file" id="formFile">
+                        {{ field }}
                       </div>
+                    {% endfor %}
                     <input type="submit">
                 </form>
             </div>
