--- a/templates/base.html
+++ b/templates/base.html
@@ -6,22 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="{% static 'styles\bootstrap-v5.css' %}" rel="stylesheet"/>
+    <link href="{% static 'styles\roboto-fonts.css' %}" rel="stylesheet" />
 
     {% block title %}{% endblock %}
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'Styles\style.css' %}">
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles\style.css' %}">
 </head>
 
 <body>
