implemented bootstrap js offline n locally

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Footer -->
 <!-- <footer class="bg-light text-dark text-center">
     <ul class="nav nav-tabs" style="background-color: #bc987e">
@@ -19,4 +21,4 @@
     </ul>
 </footer> -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="{% static 'js\bootstrap-v5.js' %}"></script>
