static files serving on production n spelling correct

--- a/templates/home.html
+++ b/templates/home.html
@@ -335,7 +335,7 @@ data-bs-ride="carousel"
           aria-expanded="false"
           data-bs-auto-close="true"
         >
-          Web-Log Viewer
+          Well Log Viewer
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
           <li>
