--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static 'styles\bootstrap-v5.css' %}" rel="stylesheet"/>
-    <link href="{% static 'styles\roboto-fonts.css' %}" rel="stylesheet" />
+    <link href="{% static 'Styles\bootstrap-v5.css' %}" rel="stylesheet"/>
+    <link href="{% static 'Styles\roboto-fonts.css' %}" rel="stylesheet" />
 
     {% block title %}{% endblock %}
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles\style.css' %}">
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'Styles\style.css' %}">
 </head>
 
 <body>
