--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
         </div>
         <br />
         <div class="dropdown d-grid gap-2">
-          <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="true"> Web-Log Viewer </button>
+          <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="true"> Well Log Viewer </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
             <li>
               <a href="{% url 'create-LAS' %}" class="dropdown-item text-success" type="button"> LAS </a>
@@ -126,237 +126,3 @@
 
 
 {% endblock %}
-
-
-
-<!-- Showcase -->
-
-<div
-id="carouselExampleControls"
-class="carousel slide"
-data-bs-ride="carousel"
->
-<div class="carousel-inner">
-  <div class="carousel-item active" data-bs-interval="1800">
-    <img src="{% static 'Assets\oilrig1.png' %}" class="d-block w-100" alt="..." />
-  </div>
-  <div class="carousel-item" data-bs-interval="2000">
-    <img src="{% static 'Assets\oilrig2.png' %}" class="d-block w-100" alt="..." />
-  </div>
-</div>
-</div>
-
-<!-- Boxes -->
-<section class="p-5">
-<h3 style="text-align: center">Common Analytics Platform</h3>
-<hr />
-<strong>
-  An umbrella platform on top of existing domain specific analytical tools
-  and interface with various data sources and applications across ONGC to
-  provide a cross domain integrated data repository available for
-  different aspects of analytics right from ML to descriptive to
-  diagnostic to predictive to prescriptive analytics built-in.
-</strong>
-<hr />
-<div class="card-group border border-2 rounded border-warning">
-  <div
-    class="card align-items-center"
-    style="background-color: lemonchiffon"
-  >
-    <img
-      src="{% static 'Assets\analysis.png' %}"
-      class="card-img-fluid"
-      alt="..."
-      style="height: 80px; margin-top: 10px"
-      width="80
-    "
-    />
-    <div class="card-body">
-      <p class="card-text">
-        Common enterprise analytics framework for the functional and cross
-        functional areas.
-      </p>
-    </div>
-  </div>
-  <div
-    class="card align-items-center"
-    style="background-color: lemonchiffon"
-  >
-    <img
-      src="{% static 'Assets\database.png' %}"
-      class="card-img-fluid"
-      alt="..."
-      style="height: 80px; margin-top: 10px"
-      width="80
-    "
-    />
-    <div class="card-body">
-      <p class="card-text">
-        Data Integration, Data Transformation, Data Storage, Data Quality
-        and Data Visualization. AI & ML model implementation capability.
-      </p>
-    </div>
-  </div>
-  <div
-    class="card align-items-center"
-    style="background-color: lemonchiffon"
-  >
-    <img
-      src="{% static 'Assets\driller.png' %}"
-      class="card-img-fluid"
-      alt="..."
-      style="height: 80px; margin-top: 10px"
-      width="80
-    "
-    />
-
-    <div class="card-body">
-      <p class="card-text">
-        Use Case I: Data-Driven Top Down Modeling(TDM) of a reservoir
-        <br /><br />
-        Use Case II: Drilling Data Analytics for optimization of Pan-India
-        Drilling operations of ONGC
-      </p>
-    </div>
-  </div>
-  <div
-    class="card align-items-center"
-    style="background-color: lemonchiffon"
-  >
-    <img
-      src="{% static 'Assets\calendar.png' %}"
-      class="card-img-fluid"
-      alt="..."
-      style="height: 80px; margin-top: 10px"
-      width="80
-    "
-    />
-    <div class="card-body">
-      <p class="card-text">
-        Post warranty OEM support for 6 years, with more use cases.
-      </p>
-    </div>
-  </div>
-</div>
-<br />
-
-<div class="card-group border border-2 rounded border-warning">
-  <div class="card">
-    <div
-      class="card-body text-center"
-      style="background-color: lemonchiffon"
-    >
-      <h5>TOOLS</h5>
-
-      <img
-        src="{% static 'Assets\SAS Logo.png' %}"
-        class="card-title mb-3 mt-3 img-fluid"
-        alt="SAS"
-      />
-      <br />
-      <div class="d-grid gap-2">
-        <button class="btn btn-danger" type="button">
-          Data Management
-        </button>
-      </div>
-      <br />
-
-      <div class="d-grid gap-2">
-        <button class="btn btn-danger" type="button">
-          Event Stream Processing
-        </button>
-      </div>
-      <br />
-      <div class="d-grid gap-2">
-        <button class="btn btn-danger" type="button">
-          Visual Data Mining & Machine Learning
-        </button>
-      </div>
-      <br />
-      <div class="d-grid gap-2">
-        <button class="btn btn-danger" type="button">
-          Visual Analytics
-        </button>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-body text-center"
-      style="background-color: lemonchiffon"
-    >
-      <h5>UTILITIES</h5>
-      <img
-        src="{% static 'Assets\wrench.png' %}"
-        class="card-title mb-3 mt-3 img-fluid"
-        alt="SAS"
-        height="60px"
-        width="60px"
-      />
-      <div class="d-grid gap-2">
-        <button class="btn btn-success" type="button">
-          Web Analytics
-        </button>
-      </div>
-      <br />
-      <div class="dropdown d-grid gap-2">
-        <button
-          class="btn btn-success dropdown-toggle"
-          type="button"
-          id="dropdownMenu2"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-          data-bs-auto-close="true"
-        >
-          Web-Forms
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <li>
-            <button class="dropdown-item text-success" type="button">
-              <a class="text-decoration-none" href="{% url 'equipment-log' %}">Equipment Log Sheet</a>
-            </button>
-          </li>
-          <li>
-            <button class="dropdown-item text-success" type="button">
-              <a class="text-decoration-none" href="{% url 'electrical-log' %}">Electrical Log Sheet</a>
-            </button>
-          </li>
-        </ul>
-
-      </div>
-      <br />
-
-      <div class="dropdown d-grid gap-2">
-        <button
-          class="btn btn-success dropdown-toggle"
-          type="button"
-          id="dropdownMenu2"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-          data-bs-auto-close="true"
-        >
-          Well Log Viewer
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <li>
-            <button class="dropdown-item text-success" type="button">
-              <a class="text-decoration-none" href="{% url 'create-LAS' %}">LAS</a>
-            </button>
-          </li>
-          <li>
-            <button class="dropdown-item text-success" type="button">
-              <a class="text-decoration-none" href="{% url 'view-DLIS' %}">DLIS</a>
-            </button>
-          </li>
-          <li>
-            <button class="dropdown-item text-success" type="button">
-              SEGY
-            </button>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-  </div>
-</div>
-</section>
